# slack-sub-bot

./: .env.sample  .gitignore  .pylintrc  AGENTS.md  Dockerfile  README.md  api.yml  chatbot.py  deploy.sh  deploy_cloudrun.sh  deploy_local.sh  launch.py  local_deploy.sh  main.py  planner.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  secrets.json.sample  spec.yml  test.py
.claude/commands/: lint.md
.github/: copilot-instructions.md
.github/workflows/: black.yml  black_autocommit.yml  deploy-cloudrun.yml  deploy.yml  test.yml
docs/: plan.md  todo.md
pub/: main.py  requirements.txt
src/: agent.py  agent_factory.py  agent_gpt.py  agent_idea.py  agent_image.py  agent_research.py  agent_slack.py  agent_summarize.py  agent_vision.py  agent_youtube.py  generative_action.py  google_trends_utils.py  main.py  requirements.txt  scraping_utils.py  url_utils.py
src/agent/: agent.py  agent_audio.py  agent_base.py  agent_code.py  agent_code_read.py  agent_delete.py  agent_feed_collect.py  agent_feed_digest.py  agent_feed_review.py  agent_gemini.py  agent_github.py  agent_gpt.py  agent_idea.py  agent_image.py  agent_marp.py  agent_quiz.py  agent_quote_picker.py  agent_radio.py  agent_recent_digest_collect.py  agent_recommend.py  agent_research.py  agent_scrape.py  agent_search.py  agent_slack.py  agent_slack_history.py  agent_slack_mail.py  agent_summarize.py  agent_text.py  agent_vision.py  agent_x.py  agent_x_article.py  agent_x_post.py  agent_youtube.py  types.py
src/common/: scraping_utils.py  slack_link_utils.py  slack_mrkdwn_utils.py
src/conf/: assistant.toml  business_quotes.json  code_prompt.toml  code_read_prompt.toml  common_sense.toml  generative_action.json  generative_actions.json  generative_agent.json  models.json  (+20 more)
sub/: chatbot.py  main.py  planner.py  requirements.txt
tests/: conftest.py  server_test.sh  test_agent_abstract_url.py  test_agent_gpt.py  test_agent_idea.py  test_agent_image.py  test_agent_slack.py  test_agent_summarize.py  test_agent_summarize_url.py  test_agent_vision.py  test_agent_wikipedia.py  test_agent_youtube.py  test_deploy_service.py  test_generative_action.py  test_generative_agent.py  test_generative_synonyms.py  test_google_trends_utils.py  test_main.py  test_one.py  test_scraping_utils.py  test_slack_link_utils.py  test_slack_mrkdwn_utils.py  test_sub_planner.py  test_wikipedia_utils.py  thread.py
tools/: build_quotes.py
(+115 files in other folders)
